@@ -384,6 +384,7 @@ The following extensions are migrated into MediaWiki 1.14:
   later that day, the IP still couldn't create another account, because it
   had marked them as having created another account, when their last account
   creation had actually failed.
+* (bug 12647) Allow autogenerated edit summary messages to be blanked with '-'
 
 === API changes in 1.14 ===
 
